fix(sidebar): Improve `New chat` btn and floating sidebar collapsed styles

--- a/styles/abstract/_ds.scss
+++ b/styles/abstract/_ds.scss
@@ -29,32 +29,6 @@ body {
 
 body,
 page {
-    --ds-rgb-info: var(--ds-rgb-blue-500);
-    --ds-rgb-primary: var(--ds-rgb-blue-500);
-    --ds-rgb-primary-foreground: var(--ds-rgb-white);
-    --ds-rgb-label-1: var(--ds-rgb-neutral-700);
-    --ds-rgb-label-2: var(--ds-rgb-neutral-450);
-    --ds-rgb-label-3: var(--ds-rgb-neutral-400);
-    --ds-rgb-error: var(--ds-rgb-red-500);
-    --ds-rgb-warning: var(--ds-rgb-amber-500);
-    --ds-rgb-success: var(--ds-rgb-green-500);
-    --ds-rgba-transparent: 255 255 255 / 0;
-    --ds-rgb-bg-base: var(--ds-rgb-white);
-    --ds-rgb-elevated: var(--ds-rgb-white);
-    --ds-rgb-track: var(--ds-rgb-neutral-200);
-    --ds-rgb-hover: var(--ds-rgb-neutral-100);
-    --ds-rgb-header: var(--ds-rgb-neutral-50);
-    --ds-rgb-separator: var(--ds-rgb-neutral-100);
-    --ds-rgb-separator-strong: var(--ds-rgb-neutral-200);
-    --ds-rgb-input: var(--ds-rgb-neutral-100);
-    --ds-rgb-input-strong: var(--ds-rgb-neutral-150);
-    --ds-rgb-input-focus: var(--ds-rgb-white);
-    --ds-rgb-link: var(--ds-rgb-primary);
-    --ds-rgb-tag: var(--ds-rgb-neutral-200);
-    --ds-rgb-segmented: var(--ds-rgb-neutral-100);
-    --ds-rgb-segmented-button: var(--ds-rgb-white);
-    --ds-rgb-segmented-separator: var(--ds-rgb-neutral-300);
-    --ds-rgb-thumb: var(--ds-rgb-white);
     // font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Open Sans, sans-serif;
     // font-family: var(--font_family), var(--font_family_default) !important;
     font-family: var(--fontFamily), var(--fontFamilyDefault) !important;
@@ -102,9 +76,9 @@ body {
     // ===================== NEW UI =====================
     // ==================================================
     // --dsw-alias-bg-base: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-bg-layer-1: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-bg-layer-2: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-bg-layer-3: var(--dsw-static-neutral-bluish-00);
+    --dsw-alias-bg-layer-1: var(--surface-1) !important;
+    --dsw-alias-bg-layer-2: var(--surface-2) !important;
+    --dsw-alias-bg-layer-3: var(--surface-3) !important;
     // --dsw-alias-bg-mask-1: rgba(0, 0, 0, .24);
     // --dsw-alias-bg-mask-2: rgba(0, 0, 0, .12);
     // --dsw-alias-bg-multi-select: var(--dsw-static-neutral-bluish-50);
@@ -116,28 +90,29 @@ body {
     // --dsw-alias-border-l2: rgba(0, 0, 0, .1);
     // --dsw-alias-border-l3: rgba(0, 0, 0, .12);
     // --dsw-alias-border-l4: rgba(0, 0, 0, .16);
-    // --dsw-alias-brand-primary-invert: var(--dsw-static-deepseek-500);
-    // --dsw-alias-brand-primary: var(--dsw-static-deepseek-500);
-    // --dsw-alias-brand-text: var(--dsw-static-deepseek-500);
+    --dsw-alias-brand-primary-invert: var(--c-on-accent) !important;
+    --dsw-alias-brand-primary: var(--c-accent) !important;
+    --dsw-alias-brand-text: var(--c-accent) !important;
     // --dsw-alias-button-contrast-fill: var(--dsw-static-neutral-bluish-700);
-    // --dsw-alias-button-elevated-fill: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-button-floating-fill: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-button-floating-hover: var(--dsw-static-neutral-bluish-75);
+    --dsw-alias-button-elevated-fill: hsla(var(--accent-hsl) / 0.15) !important;
+    --dsw-alias-button-floating-fill: var(--surface-2) !important;
+    --dsw-alias-button-floating-hover: var(--c-accent-hover) !important;
     // --dsw-alias-button-ghost-active-border: var(--dsw-static-deepseek-300);
     // --dsw-alias-button-ghost-active-fill: var(--dsw-static-deepseek-50);
     // --dsw-alias-button-ghost-active-hover: var(--dsw-static-deepseek-100);
-    // --dsw-alias-button-primary-fill: var(--dsw-alias-brand-primary);
+    --dsw-alias-button-primary-fill: var(--dsw-alias-brand-primary);
     // --dsw-alias-button-primary-hover: var(--dsw-static-deepseek-450);
     // --dsw-alias-interactive-bg-hover-accent: rgba(38, 49, 72, .14);
     // --dsw-alias-interactive-bg-hover-danger: rgba(236, 19, 19, .05);
-    // --dsw-alias-interactive-bg-hover: rgba(38, 49, 72, .06);
-    // --dsw-alias-label-caption: var(--dsw-static-neutral-bluish-400);
+    // --dsw-alias-interactive-bg-hover: var(--c-accent-hover) !important;
+    --dsw-alias-interactive-bg-hover: hsla(var(--accent-hsl) / 0.1) !important;
+    --dsw-alias-label-caption: var(--c-subtext-2) !important;
     // --dsw-alias-label-dimmed: var(--dsw-static-neutral-bluish-200);
     // --dsw-alias-label-primary-dimmed: var(--dsw-static-neutral-bluish-950);
     // --dsw-alias-label-primary-inverted: var(--dsw-static-neutral-bluish-00);
-    // --dsw-alias-label-primary: var(--dsw-static-neutral-bluish-1000);
-    // --dsw-alias-label-secondary: var(--dsw-static-neutral-bluish-700);
-    // --dsw-alias-label-tertiary: var(--dsw-static-neutral-bluish-500);
+    --dsw-alias-label-primary: var(--c-accent) !important;
+    --dsw-alias-label-secondary: var(--c-subtext-2) !important;
+    --dsw-alias-label-tertiary: var(--c-subtext-1) !important;
     // --dsw-alias-markdown-citation: var(--dsw-static-neutral-bluish-100);
     // --dsw-alias-markdown-code-block-banner: var(--dsw-static-neutral-bluish-50);
     // --dsw-alias-markdown-code-block: var(--dsw-static-neutral-bluish-50);
